--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,13 @@
-ctransformers
-sentence-transformers
-pinecone-client
-langchain
-langchain-community
-langchain-huggingface
-langchain-pinecone
-flask
-pypdf
-python-dotenv
-gradio
-langchain-google-genai
-google.generativeai
+ctransformers==0.2.27
+sentence-transformers==3.0.1
+pinecone-client==3.2.2
+langchain==0.2.3
+langchain-community==0.2.4
+langchain-huggingface==0.0.3
+langchain-pinecone==0.1.1
+pypdf==4.2.0
+python-dotenv==1.0.1
+gradio==4.36.1
+langchain-google-genai==1.0.6
+google-generativeai==0.5.4
 # -e .
