requirements.txt updated

--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ ctransformers==0.2.27
 sentence-transformers==3.0.1
 pinecone-client==3.2.2
 langchain==0.2.3
+langchain-core==0.2.5
 langchain-community==0.2.4
 langchain-huggingface==0.0.3
 langchain-pinecone==0.1.1
@@ -10,4 +11,5 @@ python-dotenv==1.0.1
 gradio==4.36.1
 langchain-google-genai==1.0.6
 google-generativeai==0.5.4
+tenacity==8.3.0
 # -e .
